--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <div class="first"></div>
   <div class="second"></div>
 </div>
+    <div style="display:none;" id="myDiv" class="animate-bottom">
   <h2>Hi</h2>
   <p>Learn to code for free <a href="http://theprogrammershub.net">here</a></p>
 </body>
